@@ -48,7 +48,7 @@ public class Doublespinner extends NumberInputElement {
 
 	public Doublespinner(double value) throws WrongValueException {
 		this();
-		setValue(Double.valueOf(value));
+		setValue(new Double(value));
 	}
 	
 	/** Returns the value (in Double), might be null unless
